# ccx-t1

./: .gitignore  Cargo.toml  README.da.md  README.ja.md  README.ru.md  README.th.md  README.tr.md  THIRD_PARTY_LICENSES.md  gh-review-hook
.github/: swift-file-length-budget.tsv
.greptile/: config.json
CLI/: CMUXCLI+ExecutableResolution.swift  CMUXCLI+InstallPreview.swift  CMUXCLI+MoveTabToNewWorkspace.swift  CMUXCLI+ThemeSupport.swift
Sources/: AppDelegate+EqualizeSplitsShortcut.swift  CmuxEventBus.swift  CmuxEventPublishing.swift  CmuxLifecycleEventPublishing.swift  CmuxSocketEventMapper.swift  CmuxTopProcessArguments.swift  CmuxTopProcessSnapshotCache.swift  CmuxTopSnapshot.swift  CmuxTopSnapshotScopeCache.swift  CommandClickFileOpenRouter.swift  ExtensionWorktreePrototype.swift  FileExplorerState.swift  GhosttyApp+SurfaceConfigurationReload.swift  GhosttyCrashBreadcrumb.swift  GhosttyTerminalView.swift  KeyboardShortcutSettings.swift  NotificationsPage.swift  RestorableAgentTypes.swift  RightSidebarMode+Availability.swift  RightSidebarRemoteCommand.swift  RightSidebarToolPanel.swift  RovoDevTranscriptPreview.swift  SessionIndexRegisteredAgents.swift  SessionPersistence.swift  SessionTranscriptTypes.swift  SettingsSearchAliases.swift  TabManager+CompatibilityTypes.swift  TabManager+EqualizeSplits.swift  TabManager.swift  TerminalController.swift  TerminalImageTransfer.swift  TerminalPaneDropTargetView.swift  TmuxResumeParser.swift  WindowDecorationsController.swift  Workspace+DetachedSurfaceTransfer.swift  Workspace+EqualizeSplitsSupport.swift  Workspace.swift  (+5 more)
(+686 files in other folders)
