[package]
name = "ccx"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ulid = "1.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
notify = "6.1.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5.9", features = ["derive", "env"] }
fd-lock = "4.0.2"
camino = { version = "1.1.7", features = ["serde1"] }
directories = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
